--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "dlv": "^1.1.3"
   },
   "devDependencies": {
-    "karmatic": "^1.3.1",
+    "karmatic": "^1.4.0",
     "microbundle": "^0.11.0",
-    "preact": "^10.0.0-beta.3",
-    "prettier": "^1.18.2",
-    "webpack": "^4.35.2"
+    "preact": "^10.3.4",
+    "prettier": "^2.0.1",
+    "webpack": "^4.42.0"
   },
   "peerDependencies": {
-    "preact": ">=10 || ^10.0.0-beta.0"
+    "preact": ">=10"
   },
   "husky": {
     "hooks": {
